# AcademyScopeMobile

./: CMakeLists.txt  README.md
QML/: Main.qml
Src/: Controller.cpp  Controller.hpp  main.cpp
UI/: Main.qml
